--- a/res/layout/mainkabtv.xml
+++ b/res/layout/mainkabtv.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/player_menu">
-	
-    <item android:id="@+id/player_menu_about"
-    	  android:icon="@drawable/ic_menu_notifications"	
-          android:title="@string/player_menu_about" />
-    <item android:id="@+id/player_menu_decode_audio"
-    	  android:icon="@drawable/ic_menu_block"	
-          android:title="@string/player_menu_decode_audio" />
-</menu>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+    
+    <TextView
+	 	android:id="@+id/textview_path"
+	    android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" />
+	    
+	<ListView
+	 	android:id="@android:id/list"
+	 	android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" />
+	    
+	<TextView
+	 	android:id="@android:id/empty"
+	 	android:layout_width="fill_parent" 
+	    android:layout_height="wrap_content" 
+	    android:text="@string/label_no_data"/>
+		    
+</LinearLayout>
