1. Commuinication disconnection is handled 2. Orientation is handled - currently video is taking all area of the screen because there ius no GUI yet

--- a/res/layout/mainkabtv.xml
+++ b/res/layout/mainkabtv.xml
@@ -21,4 +21,5 @@
 	    android:text="@string/label_no_data"/>
 		    
 
+<ToggleButton android:text="@+id/ToggleButton01" android:id="@+id/ToggleButton01" android:layout_width="wrap_content" android:layout_height="wrap_content"></ToggleButton>
 </LinearLayout>
