branching for version 0.1

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,8 +7,8 @@
 
 <SurfaceView android:id="@+id/mMovieView"
 	
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
+	android:layout_width="320dip"
+	android:layout_height="240dip"
 	
 	/>
 	  
