--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,15 +3,13 @@
 	android:background="#000000"
 	android:screenOrientation="sensor"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	 android:orientation="vertical">>
+	android:layout_height="fill_parent" android:orientation="vertical">>
 <TextView android:id="@+id/title"
+android:textAppearance="?android:attr/textAppearanceLarge"
 android:text="Title"
-android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:layout_centerVertical="true">
-	</TextView>	
-<SurfaceView android:padding="40dip" android:layout_width="320dip" android:id="@+id/mMovieView" android:layout_height="240dip"></SurfaceView>
+android:layout_centerVertical="true" android:layout_weight="1" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
+	</TextView>
+<SurfaceView android:layout_weight="1" android:layout_height="wrap_content" android:padding="40dip" android:layout_width="match_parent" android:id="@+id/mMovieView"></SurfaceView>
 
 	  
 
