1. Fix caption in channel details view 2. Fix caption while playing - audio 3. Add orientation switching while playing 4. Connect the connectivity module to new playing class (Fridkin stream)

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,7 +9,7 @@ android:textAppearance="?android:attr/textAppearanceLarge"
 android:text="Title"
 android:layout_centerVertical="true" android:layout_weight="1" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
 	</TextView>
-<SurfaceView android:layout_weight="1" android:layout_height="wrap_content" android:padding="40dip" android:layout_width="match_parent" android:id="@+id/mMovieView"></SurfaceView>
+<SurfaceView android:layout_weight="1" android:layout_height="240px" android:padding="40dip" android:layout_width="320px" android:id="@+id/mMovieView"></SurfaceView>
 
 	  
 
